--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,7 @@
 
 body {
     color: var(--font-color);
-    background-color: var(--background-color);
+    /* background-color: var(--background-color); */
     background-repeat: no-repeat;
     background-size: cover;
     font-size: var(--font-size);
