--- a/src/app.css
+++ b/src/app.css
@@ -248,6 +248,12 @@ input::placeholder {
     line-height: 2.2;
 }
 
+#today-forecast > .hour {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.9rem;
+}
+
 @media (width <= 1275px) {
     #location-container {
         grid-area: 1 / 1 / 2 / 5;
