--- a/src/app.css
+++ b/src/app.css
@@ -133,6 +133,19 @@ input::placeholder {
     line-height: 1.5;
 }
 
+.forecast-hours-container {
+    height: 50%;
+    width: clamp(325px, 100%, 390px);
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--info-container-background);
+    overflow-y: scroll;
+}
+
+.forecast-hours-container::-webkit-scrollbar {
+    display: none;
+}
+
 /*  */
 /* Location Styles */
 /*  */
@@ -256,27 +269,17 @@ input::placeholder {
 }
 
 #today-forecast {
-    height: 50%;
-    width: clamp(325px, 100%, 390px);
     margin-right: auto;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: var(--info-container-background);
-    overflow-y: scroll;
 }
 
-#today-forecast::-webkit-scrollbar {
-    display: none;
-}
-
-#today-forecast > .hour-span, #today-forecast > .forecast-headers {
+.hour-span, .forecast-headers {
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-size: 1.9rem;
 }
 
-#today-forecast > .forecast-headers {
+.forecast-headers {
     margin: 10px auto 20px;
 }
 
@@ -284,24 +287,104 @@ input::placeholder {
 /* Tomorrow Forecast Styles Begin Here */
 /*  */
 
-#tmr-forecast-container {
+#forecast-container-container {
     grid-area: 2 / 5 / 9 / 8;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: repeat(16, 1fr) / repeat(6, 1fr);
 }
 
-#tmr-forecast-container > .forecast-header.active {
+.forecast-holder {
+    grid-area: 1 / 1 / 2 / 4;
+}
+
+.forecast-holder > .forecast-header {
+    display: inline-block;
+    margin: 0 20px;
+}
+
+.forecast-holder > .forecast-header.active {
     text-decoration: underline;
     text-underline-offset: 5px;
-    margin-bottom: 10rem;
-}
-
-#tmr-forecast-main-container {
-    height: 40%;
-    padding: 20% 0 0;
 }
 
 
+#forecast-overview-container-1 {
+    grid-area: 3 / 1 / 4 / 7;
+}
+
+#forecast-overview-container-2 {
+    grid-area: 5 / 1 / 6 / 7;
+}
+
+#forecast-overview-container-3 {
+    grid-area: 7 / 1 / 8 / 7;
+}
+
+#forecast-overview-container-4 {
+    grid-area: 9 / 1 / 10 / 7;
+}
+
+#forecast-overview-container-5 {
+    grid-area: 11 / 1 / 12 / 7;
+}
+
+#forecast-overview-container-6 {
+    grid-area: 13 / 1 / 14 / 7;
+}
+
+#forecast-overview-container-7 {
+    grid-area: 15 / 1 / 16 / 7;
+}
+
+
+.overview-stat-container {
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(6, 1fr);
+    height: 100%;
+}
+
+.overview-container > .dec-container {
+    height: 4rem;
+    background-color: black;
+}
+
+.overview-stat-container > .forecast-stat {
+    line-height: 1;
+    margin: auto;
+}
+
+.overview-stat-container > .max-temp {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.overview-stat-container > .min-temp {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.overview-stat-container > .sunrise {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.overview-stat-container > .sunset {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.forecast-declaration {
+    font-size: var(--header-size);
+    line-height: 2;
+    margin: auto 10px;
+}
+
+.avg-temp-holder {
+    grid-area: 1 / 1 / 3 / 2;
+    height: fit-content;
+    margin: auto;
+    text-align: center;
+}
+
+.avg-temp-holder > .avg-temp {
+    font-size: clamp(3rem, 2vw, 10rem);
+}
 
 @media (width <= 1275px) {
     #location-container {
@@ -316,7 +399,7 @@ input::placeholder {
         margin-top: 7.5%
     }
 
-    #tmr-forecast-container {
+    #forecast-container-container {
         grid-area: 2 / 7 / 9 / 19;
     }
 }
