--- a/src/app.css
+++ b/src/app.css
@@ -284,11 +284,11 @@ input::placeholder {
 }
 
 /*  */
-/* Tomorrow Forecast Styles Begin Here */
+ /* Forecast Styles Begin Here */
 /*  */
 
 #forecast-container-container {
-    grid-area: 2 / 5 / 9 / 8;
+    grid-area: 2 / 4 / 9 / 8;
     display: grid;
     grid-template: repeat(16, 1fr) / repeat(6, 1fr);
 }
@@ -369,6 +369,19 @@ input::placeholder {
     grid-area: 2 / 3 / 3 / 4;
 }
 
+.overview-stat-container > .condition-holder {
+    grid-area: 1 / 5 / 3 / 7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.condition-holder > img {
+    width: 50px;
+    height: 50px;
+}
+
 .forecast-declaration {
     font-size: var(--header-size);
     line-height: 2;
@@ -383,7 +396,7 @@ input::placeholder {
 }
 
 .avg-temp-holder > .avg-temp {
-    font-size: clamp(3rem, 2vw, 10rem);
+    font-size: clamp(3rem, 1vw, 10rem);
 }
 
 @media (width <= 1275px) {
