--- a/src/app.css
+++ b/src/app.css
@@ -346,6 +346,14 @@ input::placeholder {
 .overview-container > .dec-container {
     height: 4rem;
     background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+}
+
+.forecast-declaration, .forecast-date {
+    font-size: var(--header-size);
 }
 
 .overview-stat-container > .forecast-stat {
@@ -380,12 +388,6 @@ input::placeholder {
 .condition-holder > img {
     width: 50px;
     height: 50px;
-}
-
-.forecast-declaration {
-    font-size: var(--header-size);
-    line-height: 2;
-    margin: auto 10px;
 }
 
 .avg-temp-holder {
