--- a/src/app.css
+++ b/src/app.css
@@ -138,12 +138,26 @@ input::placeholder {
     width: clamp(325px, 100%, 390px);
     padding: 10px;
     border-radius: 10px;
-    background-color: var(--info-container-background);
+    /* background-color: var(--info-container-background); */
     overflow-y: scroll;
 }
 
 .forecast-hours-container::-webkit-scrollbar {
     display: none;
+}
+
+.forecast-elem {
+    padding: 5px 0;
+    width: 70px;
+    margin: auto;
+    text-align: center;
+}
+
+.break-line {
+    height: 1px;
+    width: calc(100% - 5px);
+    margin-right: auto;
+    background-color: var(--font-color);
 }
 
 /*  */
@@ -246,11 +260,8 @@ input::placeholder {
     gap: 8px;
 }
 
-.break-line {
-    height: 1px;
+#current-weather-container > .break-line {
     width: clamp(325px, 100%, 390px);
-    margin-right: auto;
-    background-color: var(--font-color);
 }
 
 #info-extended {
@@ -362,10 +373,25 @@ input::placeholder {
     width: 90%;
     margin: auto;
     display: grid;
+    grid-template: repeat(16, 1fr) / repeat(5, 1fr);
 }
 
 #insight-header-container {
     height: fit-content;
+    grid-area: 2 / 1 / 3 / 6;
+}
+
+.forecast-header-container {
+    grid-area: 3 / 1 / 4 / 6;
+}
+
+.forecast-breakdown {
+    grid-area: 4 / 1 / 16 / 6;
+    overflow: scroll;
+}
+
+.forecast-breakdown::-webkit-scrollbar {
+    display: none;
 }
 
 @media (width <= 1275px) {
